--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "illuminate/support": ">=5.0.0"
     },
     "autoload": {
+        "files": [
+            "src/rb.php"
+        ],
         "psr-4": {
             "Mamift\\Redbean4Laravel5\\": "src/"
         }
